force-app/main/default/objects/Artist__c/fields/Album_Count__c.field-meta.xml
<CustomField>
    <fullName>Album_Count__c</fullName>
    <label>Album Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>