force-app/main/default/objects/Artist__c/fields/Manger__c.field-meta.xml
<CustomField>
    <fullName>Manger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manger</label>
    <referenceTo>Manager__c</referenceTo>
    <relationshipLabel>Artists</relationshipLabel>
    <relationshipName>artists</relationshipName>
    <type>Lookup</type>
</CustomField>