force-app/main/default/objects/Artist__c/fields/ProfileImage__c.field-meta.xml
<CustomField>
    <fullName>ProfileImage__c</fullName>
    <label>ProfileImage</label>
    <type>Url</type>
</CustomField>