force-app/main/default/objects/Artist__c/fields/Songs_Count__c.field-meta.xml
<CustomField>
    <fullName>Songs_Count__c</fullName>
    <label>Songs Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>